--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -4,7 +4,6 @@
   <nav>
     <ul class="nav_links">
       <li><a href="profile">Profile</a></li>
-      <li><a href="#price">Pricing</a></li>
     </ul>
   </nav>
   <button class="arrow-button" (click)="this.toQuiz()"><a class="og-arrow"routerLink="quiz"
@@ -30,7 +29,23 @@
       <div class="icon">&#9888;</div>
       <h3>{{this.warnMsg}}</h3>
       </div>
-    <div class="profile-card">
+      <div *ngIf="this.isLoad">
+        <svg class="pl" viewBox="0 0 200 200" width="200" height="200" xmlns="http://www.w3.org/2000/svg">
+          <defs>
+            <linearGradient id="pl-grad1" x1="1" y1="0.5" x2="0" y2="0.5">
+              <stop offset="0%" stop-color="hsl(313,90%,55%)" />
+              <stop offset="100%" stop-color="hsl(223,90%,55%)" />
+            </linearGradient>
+            <linearGradient id="pl-grad2" x1="0" y1="0" x2="0" y2="1">
+              <stop offset="0%" stop-color="hsl(313,90%,55%)" />
+              <stop offset="100%" stop-color="hsl(223,90%,55%)" />
+            </linearGradient>
+          </defs>
+          <circle class="pl__ring" cx="100" cy="100" r="82" fill="none" stroke="url(#pl-grad1)" stroke-width="36" stroke-dasharray="0 257 1 257" stroke-dashoffset="0.01" stroke-linecap="round" transform="rotate(-90,100,100)" />
+          <line class="pl__ball" stroke="url(#pl-grad2)" x1="100" y1="18" x2="100.01" y2="182" stroke-width="36" stroke-dasharray="1 165" stroke-linecap="round" />
+        </svg>
+      </div>
+    <div class="profile-card" *ngIf="!this.isLoad">
       <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
         <div class="card p-4">
           <div class=" image d-flex flex-column justify-content-center align-items-center">
